adds episode number

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,16 @@
 cmake_minimum_required(VERSION 3.13)
-project(tcp_client_server)
-
-find_package(Threads)
-find_package(Cellworld)
 
 set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++20 -pthread")
+
+project(tcp_client_server
+        VERSION 2021.0.1
+        DESCRIPTION "Experiment server"
+        LANGUAGES CXX)
+
+find_package(Cellworld REQUIRED)
+find_package(Threads)
+
+set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-pthread")
 
 add_executable(tcp_server
         tool/server_example.cpp
@@ -22,6 +27,7 @@ add_executable(tcp_client
 target_link_libraries (tcp_server
         ${CMAKE_THREAD_LIBS_INIT}
         ${CELLWORLD_LIBRARIES})
+
 target_link_libraries (tcp_client
         ${CMAKE_THREAD_LIBS_INIT}
         ${CELLWORLD_LIBRARIES})
