--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,31 @@ project(tcp_client_server
         DESCRIPTION "Experiment server"
         LANGUAGES CXX)
 
-find_package(Cellworld REQUIRED)
+####
+#### DEPENDENCIES
+####
+
+if (NOT EXISTS ${CMAKE_BINARY_DIR}/DependenciesConfig.cmake)
+    file(DOWNLOAD https://raw.githubusercontent.com/germanespinosa/dependencies/main/DependenciesConfig.cmake ${CMAKE_BINARY_DIR}/DependenciesConfig.cmake)
+endif()
+set(Dependencies_DIR "${CMAKE_BINARY_DIR}")
+find_package (Dependencies REQUIRED)
+
+####
+####
+####
+
+
+install_git_dependency(Cellworld
+        https://github.com/germanespinosa/cellworld
+        PRIVATE
+        CMAKE_PROJECT
+        IMPORT_TARGETS cellworld)
+
+install_git_dependency(Tcp_messages https://github.com/germanespinosa/tcp-messages
+        CMAKE_PROJECT
+        IMPORT_TARGETS tcp_messages)
+
 find_package(Threads)
 
 set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-pthread")
@@ -25,9 +49,7 @@ add_executable(tcp_client
         src/client.cpp)
 
 target_link_libraries (tcp_server
-        ${CMAKE_THREAD_LIBS_INIT}
-        ${CELLWORLD_LIBRARIES})
+        cellworld)
 
 target_link_libraries (tcp_client
-        ${CMAKE_THREAD_LIBS_INIT}
-        ${CELLWORLD_LIBRARIES})
+        cellworld)
